Fixed bug #26042 (memory leak if mcrypt_generic_deinit() is not called after every mcrypt_generic_init() call).

# This will be MFHed into 4.3.X tree after release.