ext/mcrypt/mcrypt.c
@@ -223,6 +223,7 @@ PHP_INI_END()
 static void php_mcrypt_module_dtor(zend_rsrc_list_entry *rsrc TSRMLS_DC)
 {
 	MCRYPT td = (MCRYPT) rsrc->ptr;
+	mcrypt_generic_deinit(td);
 	mcrypt_module_close (td);
 }
 
@@ -426,6 +427,7 @@ PHP_FUNCTION(mcrypt_generic_init)
 	}
 	memcpy(iv_s, Z_STRVAL_PP(iv), iv_size);
 
+	mcrypt_generic_deinit(td);
 	result = mcrypt_generic_init(td, key_s, key_size, iv_s);
 
 	/* If this function fails, close the mcrypt module to prevent crashes
